--- a/SpeedyHtmlBuilder/SpeedyHtmlBuilder.csproj
+++ b/SpeedyHtmlBuilder/SpeedyHtmlBuilder.csproj
@@ -27,7 +27,7 @@
     <PlatformTarget>AnyCPU</PlatformTarget>
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\..\..\Web Projects\SimpleSite\gamedev.io\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
