--- a/SpeedyHtmlBuilder/SpeedyHtmlBuilder.csproj
+++ b/SpeedyHtmlBuilder/SpeedyHtmlBuilder.csproj
@@ -49,6 +49,7 @@
     <Compile Include="Navbar.cs" />
     <Compile Include="Page.cs" />
     <Compile Include="CodeCS.cs" />
+    <Compile Include="Partial.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Row.cs" />
